<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="how_was_the_service">How was the service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="button">Button</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_tip_up">Round tip up</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="tip_amount2">Tip Amount</string>
    <string name="todo">TODO</string>
</resources>