<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
                android:id="@+id/icon_cost_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_store"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cost_of_service"
                app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
                android:layout_marginStart="16dp" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost_of_service"
                android:layout_width="186dp"
                android:layout_height="101dp"
                android:hint="@string/cost_of_service"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="164dp"
                android:layout_marginStart="16dp"
                style="@style/Widget.TipTime.TextView"
                app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
                app:layout_constraintHorizontal_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="163dp"
                    style="@style/Widget.TipTime.TextView"
                    android:layout_height="71dp"
                    android:id="@+id/costOfServiceEditingText"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:inputType="numberDecimal"
                    android:background="@color/white"
                    android:textAlignment="viewStart" />


        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/how_was_the_service"
            android:layout_width="wrap_content"
            style="@style/Widget.TipTime.TextView"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="228dp"
            app:layout_constraintStart_toEndOf="@+id/icon_service_question"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.206" />

    <RadioGroup
            android:layout_width="165dp"
            android:layout_height="147dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="12dp"
            android:checkedButton="@id/option20"
            android:id="@+id/radioGroup">

        <RadioButton
                android:text="@string/amazing_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/option20"
                tools:ignore="TextContrastCheck" />

        <RadioButton
                android:text="@string/good_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/option18" />

        <RadioButton
                android:text="@string/ok_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/option15" />
    </RadioGroup>

    <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/switch1"
            app:layout_constraintBottom_toBottomOf="@id/switch1"
            android:layout_marginStart="16dp" />

    <Switch
            android:text="@string/round_tip_up"
            android:layout_width="338dp"
            android:layout_height="56dp"
            android:id="@+id/switch1"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@+id/icon_round_up"
            android:layout_marginStart="16dp" />

    <Button
            android:text="@string/calculate"
            android:layout_width="379dp"
            android:layout_height="54dp" android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/switch1"
            android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.361"/>

    <TextView
            android:layout_width="224dp"
            android:layout_height="69dp"
            android:id="@+id/textView2"
            tools:text="Tip Amount"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textAlignment="center"
            style="@style/Widget.TipTime.TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.913"
            android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>